--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,6 @@ a:hover {
 html,
 body {
   margin: 0;
-  /* display: flex;
-  place-items: center; */
   min-width: 320px;
   min-height: 100vh;
   height: 100%;
@@ -67,4 +65,14 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+#c2-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+#c2 {
+  width: 100%;
+  height: 100%;
 }
