--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,6 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+@font-face {
+  font-family: 'ABCCamera-Regular';
+  src: url('/ABCCamera-Regular.52746e65.woff') format('woff');
 }
 
 html,
@@ -30,49 +11,55 @@ body {
   height: 100%;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-#c2-container {
-  position: relative;
-  width: 100%;
+canvas {
+  display: block;
+  width: 100vw;
   height: 100vh;
 }
 
-#c2 {
+.logo {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -30%);
   width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo .logo-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+}
+
+.logo .logo-container .logo-img {
+  width: 50px;
+}
+
+.logo .logo-container .logo-title {
+  font-size: 2rem;
+  margin: 0;
+  color: #ffffff;
+  font-family: 'ABCCamera-Regular', sans-serif;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+@media (min-width: 768px) {
+  .logo .logo-container .logo-title {
+    font-size: calc(2rem + (6 - 2.5) * ((100vw - 320px) / (1280 - 320)));
+  }
+}
+
+@media (min-width: 1280px) {
+  .logo .logo-container .logo-img {
+    width: 80px;
+  }
+  .logo .logo-container .logo-title {
+    font-size: 4rem;
+  }
 }
