--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,10 @@ body {
   height: 100%;
 }
 
-canvas {
-  display: block;
+.app-container {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 .logo {
